--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1>website</h1>
 
 
-<p align="center"> <img src="wenig.jpg"> </p>
+<p align="center"> <img src="greenland.jpg"> </p>
 <script>
   
 </script>
